fixed control panel collapse glitch

--- a/web_app/static/css/result_viewer.css
+++ b/web_app/static/css/result_viewer.css
@@ -62,3 +62,7 @@
     margin-top: 8px;
     font-style: italic;
 }
+
+.control-panel.minimized #rv-color-key-group {
+    display: none;
+}
